<resources>
    <string name="app_name">PadelAPP</string>
    <string name="start">start</string>
    <string name="welcome_to_padel_app"> Welcome to Padel App</string>
    <string name="ip_address">IP address</string>
    <string name="connect">Introduce the Robot IP address to connect</string>
    <string name="port">Port</string>
    <string name="btn_connect">Connect</string>
    <string name="send_message">Send Message</string>
    <string name="received">Message correctly received</string>
    <string name="noreceived">Message was not correctly received</string>
    <string name="cont">Continue</string>
    <string name="fast_modes">Fast Modes</string>
    <string name="lobs">LOBS</string>
    <string name="drop_shots">Drop Shots</string>
    <string name="wall_shots">Wall Shots</string>
    <string name="smashes">Smash</string>
    <string name="speed">Speed</string>
    <string name="no_balls">No. Balls</string>
    <string name="no_ball">No. Balls</string>
    <string name="spin">Spin</string>
    <string name="feed">Interval</string>
    <string name="height">Height</string>
    <string name="number_balls">Balls:</string>
    <string name="speed2">Speed:</string>
    <string name="feed2">Interval:</string>
    <string name="spin2">Spin:</string>
    <string name="height2">Height:</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="ball_parameters">Ball Parameters</string>
    <string name="lobInfo">LOB: Golpe alto y profundo que hacen que la pelota tenga una trayectoria alta y curva, para superar al oponente y llevarlo al fondo de la pista.</string>
    <string name="wallInfo">WALL SHOT: Golpe dirigido hacia la pared lateral, para hacer rebotar la pelota en la pared y crear un ángulo difícil para el oponente.</string>
    <string name="dropInfo">DROP SHOT: Golpe corto y bajo que caen cerca de la red, para sorprender al oponente y hacer que corra cuando está en el fondo de la pista.</string>
    <string name="smashInfo">SMASH: Golpe potentes y rápido que se ejecuta desde arriba de la cabeza, para terminar un punto con fuerza al golpear la pelota hacia abajo.</string>
    <string name="seepdInfo">SPEED: La rapidez con la que la pelota es lanzada por el robot, medida en km/h.</string>
    <string name="spinInfo">SPIN: La rotación impartida a la pelota mientras se lanza, afectando su trayectoria y rebote.</string>
    <string name="ballsInfo">No. BALLS: La cantidad de pelotas que el robot lanzará en cada ciclo de lanzamiento.</string>
    <string name="heightInfo">HEIGHT: La altura a la que se lanza la pelota sobre la altura de la red, medida en centimetros.</string>
    <string name="intervalInfo">INTERVAL: El tiempo entre cada lanzamiento de pelota, medido en segundos.</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">play</string>
    <string name="finish_execution">Finish Execution</string>
    <string name="next_ball_in">Next ball in…</string>
    <string name="zero">00</string>
</resources>