<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/blue2"
    tools:context=".InfoActivity">

    <!-- FAST MODES -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_modes"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="#2D3C9C"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Lobs -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lobInfo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="12dp" />

        <!-- Wall Shots -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/wallInfo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Drop Shots -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dropInfo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="12dp"/>

        <!-- Smashes -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/smashInfo"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

    </LinearLayout>

    <!-- Ball Parameters -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ball_parameters"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textColor="#2D3C9C"/>

    <!-- Speed -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seepdInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <!-- Spin -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <!-- Number of Balls -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ballsInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <!-- Height -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heightInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <!-- Interval of Throw -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intervalInfo"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <Button
        android:id="@+id/btOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:textSize="16sp"
        android:textAlignment="center"
        android:backgroundTint="#312A5C"/>

</LinearLayout>


