<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/wall">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="#1A237E"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/ip_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address"
            android:background="@drawable/ip_address"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:drawableStart="@drawable/va_connection"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="number"
            android:digits="0123456789.-,+">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:background="@drawable/ip_address"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/va_connection">
        </TextView>

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_connect"
            app:cornerRadius ="10dp"
            android:backgroundTint="#0E42C5"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="HELLO"
            android:layout_gravity="center"
            android:textAlignment="center">
        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/btSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#3252CF"
        app:layout_constraintTop_toBottomOf="@+id/Linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send_message"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius ="10dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>