<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity"
    android:paddingHorizontal="5dp"
    android:paddingVertical="5dp"
    android:background="@color/background_app">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="0dp"
        
        android:layout_height="wrap_content"
        tools:text="ip: xxx.xxx.x.xxx      Port: 8080"
        android:textAllCaps="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:background="#7CF4C4D8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:background="@color/background_component"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#686EEF"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fast_modes"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="18dp"
            android:paddingVertical="8dp"
            android:background="@color/background_component">

            <Button
                android:id="@+id/btnLobs"
                android:text="@string/lobs"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_gravity="start|top"
                android:background="@drawable/roundedbuttons">
            </Button>

            <Button
                android:id="@+id/btnDrops"
                android:text="@string/drop_shots"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_gravity="end|top"
                android:background="@drawable/roundedbuttons">
            </Button>

            <Button
                android:id="@+id/btnSmash"
                android:text="@string/smashes"
                android:textSize="17.2sp"
                android:textStyle="bold"
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_gravity="end|bottom"
                android:background="@drawable/roundedbuttons">
            </Button>

            <Button
                android:id="@+id/btnWall"
                android:text="@string/wall_shots"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_gravity="start|bottom"
                android:background="@drawable/roundedbuttons">
            </Button>

            <ImageButton
                android:id="@+id/btnInfo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/info"
                android:background="@color/background_component"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter">
            </ImageButton>

        </FrameLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>